fixed some alignment issues

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -110,10 +110,10 @@ footer {
     bottom: 0;
     left: 0;
     right: 0;
-    top: 0;
+    top: 8;
     background: linear-gradient(to bottom, rgba(0,0,0,1), rgba(0,0,0,0.5), rgba(0,0,0,0), rgba(0,0,0,0));
     width: 95%;
-    height: 100%;
+    height: 93%;
     max-width: 360px;
     margin-left: auto;
     margin-right: auto;
